changed sdb to tdb and solr location to okd service name

--- a/vivo/dockercompose.runtime.properties
+++ b/vivo/dockercompose.runtime.properties
@@ -82,7 +82,8 @@ email.replyTo = vivoAdmin@mydomain.edu
   #   Example:
   #     vitro.local.solr.url = http://localhost:8080/vivosolr
   #
-vitro.local.solr.url = http://solr:8983/solr/vivocore
+#vitro.local.solr.url = http://solr:8983/solr/vivocore
+vitro.local.solr.url = http://vivo-solr-test.scholars.svc:8983/solr/vivocore
 
 
 # -----------------------------------------------------------------------------
