--- a/vivo/Dockerfile
+++ b/vivo/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get install -y maven git
 WORKDIR /usr/local/
 RUN git clone https://github.com/vivo-project/Vitro.git Vitro -b rel-1.11.0-RC
 RUN git clone https://github.com/vivo-project/VIVO.git VIVO -b rel-1.11.0-RC
+
 WORKDIR /usr/local/VIVO/
 RUN mvn install -s installer/example-settings.xml
 
@@ -37,6 +38,9 @@ WORKDIR /usr/local/VIVO/home/config
 
 COPY ./dockercompose.runtime.properties runtime.properties
 COPY ./example.applicationSetup.n3 applicationSetup.n3
+COPY ./dockercompose.runtime.properties /usr/local/vivo/home/config/runtime.properties
+COPY ./example.applicationSetup.n3 /usr/local/vivo/home/config/applicationSetup.n3
+
 
 RUN chmod ugo+w -R /usr/local/tomcat/temp
 RUN chmod ugo+w -R /usr/local/vivo/home
