--- a/cron-backup/Dockerfile
+++ b/cron-backup/Dockerfile
@@ -1,22 +1,16 @@
-FROM tomcat:9.0.21-jdk11-openjdk
+FROM maven:3.6.2-jdk-11-openj9
 
 MAINTAINER Robert Nelson <robert.nelson@duke.edu>
-
-RUN apt-get update
-RUN apt-get install -y maven git
 
 WORKDIR /usr/local/
 RUN git clone git@github.com:vivo-project/jenatools.git -b master 
 RUN mvn install -s pom.xml
 
-# Set properties
-# Adjust logging, you can mount over this in docker-compose to further adjust
-#COPY ./log4j.properties /usr/local/tomcat/webapps/VIVO/WEB-INF/classes
+# NOTE: this might need to be mounted directory in openshift
 WORKDIR /usr/local/VIVO/home/config
+
 COPY ../vivo/dockercompose.runtime.properties runtime.properties
 COPY ../vivo/example.applicationSetup.n3 applicationSetup.n3
-
-#RUN export CATALINA_OPTS="-Xms512m -Xmx512m -XX:MaxPermSize=128m"
 
 
 
