--- a/vivo/dockercompose.runtime.properties
+++ b/vivo/dockercompose.runtime.properties
@@ -30,7 +30,7 @@
   #
   # http://vivo.cornell.edu/individual/
   #
-Vitro.defaultNamespace = http://vivo.mydomain.edu/individual/
+Vitro.defaultNamespace = https://vstf-vivo.cloud.duke.edu/individual/
 
   #
   # The email address of the root user for the VIVO application. The password 
